<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/fragment_detail_container">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/bg_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_100"
            android:orientation="vertical"
            android:paddingBottom="@dimen/layout_padding"
            tools:context="in.divyamary.moviereel.MovieDetailFragment">

            <ImageView
                android:contentDescription="@string/backdrop_image"
                android:id="@+id/backdrop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY" />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/card_horizontal_margin"
                android:layout_marginRight="@dimen/card_horizontal_margin"
                android:layout_marginTop="@dimen/card_vertical_margin"
                card_view:cardBackgroundColor="@color/grey_50"
                card_view:cardCornerRadius="@dimen/card_radius"
                card_view:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:breakStrategy="high_quality"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:paddingLeft="@dimen/text_padding"
                        android:paddingRight="@dimen/text_padding"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:baselineAligned="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:contentDescription="@string/icon_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginRight="@dimen/image_right_margin"
                                android:background="@drawable/star" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/vote_average"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed" />

                                <TextView
                                    android:id="@+id/vote_count"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:contentDescription="@string/icon_runtime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/image_right_margin"
                                android:background="@drawable/clock" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/runtime"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed"
                                    android:gravity="center" />

                                <TextView
                                    android:id="@+id/minutes"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed"
                                    android:gravity="center"
                                    android:text="@string/text_minutes" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:contentDescription="@string/icon_calendar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginRight="@dimen/image_right_margin"
                                android:background="@drawable/calendar" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/release_year"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed" />

                                <TextView
                                    android:id="@+id/release_ddmm"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/card_horizontal_margin"
                android:layout_marginRight="@dimen/card_horizontal_margin"
                android:layout_marginTop="@dimen/card_vertical_margin"
                card_view:cardBackgroundColor="@color/grey_50"
                card_view:cardCornerRadius="@dimen/card_radius"
                card_view:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/layout_padding">

                    <TextView
                        android:id="@+id/overview_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/text_overview"
                        android:textAllCaps="true" />

                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:breakStrategy="high_quality"
                        android:fontFamily="sans-serif-light"
                        android:lineSpacingMultiplier="1.2"
                        android:textColor="@color/grey_900" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/card_horizontal_margin"
                android:layout_marginRight="@dimen/card_horizontal_margin"
                android:layout_marginTop="@dimen/card_vertical_margin"
                card_view:cardBackgroundColor="@color/grey_50"
                card_view:cardCornerRadius="@dimen/card_radius"
                card_view:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/layout_padding">

                    <ImageView
                        android:contentDescription="@string/poster_image"
                        android:id="@+id/poster"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_marginLeft="5dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/director_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/text_director"
                            android:textAllCaps="true" />

                        <TextView
                            android:id="@+id/director"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/text_bottom_margin"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/grey_900" />

                        <TextView
                            android:id="@+id/certification_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/text_certified"
                            android:textAllCaps="true" />

                        <TextView
                            android:id="@+id/certificate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/grey_900" />

                        <LinearLayout
                            android:id="@+id/genre_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar_transparent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/TransparentToolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"></android.support.v7.widget.Toolbar>

</FrameLayout>